k8s/overlays/tempo-minio/tempo-minio-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tempo-to-minio
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: tempo
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: host-runtime
      ports:
        - protocol: TCP
          port: 9000
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
